--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.8)
 project(filter)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -11,6 +11,10 @@ project(filter)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  tf2
+  tf2_ros
+  pcl_conversions
+  pcl_ros
   sensor_msgs geometry_msgs tf dynamic_reconfigure
 )
 
@@ -48,4 +52,6 @@ add_executable(bias_calculator src/bias_calculator.cpp)
 add_dependencies(bias_calculator ${PROJECT_NAME}_gencfg)
 target_link_libraries(bias_calculator ${catkin_LIBRARIES} )
 
-
+add_executable(pointcloud_tf_trans src/pointcloud_tf_trans)
+add_dependencies(pointcloud_tf_trans ${PROJECT_NAME}_gencfg)
+target_link_libraries(pointcloud_tf_trans ${catkin_LIBRARIES} )
